[tool.poetry]
name = "fastapi-nlp"
version = "0.1.0"
description = "Test app for spacy library and fast api"
authors = ["kiri23 <christian_nogueras@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.3.1"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0.tar.gz" }
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.3.0/en_core_web_md-3.3.0.tar.gz" }
fastapi = "^0.78.0"
uvicorn = "^0.18.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
